fixed closing list elements on update, realigned infobox meta

--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -76,6 +76,7 @@
 
         .meta {
             display: block;
+            text-align: right;
         }
 
 /* Image Holder
